--- a/gb/20/2/17/n11874785.md
+++ b/gb/20/2/17/n11874785.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dagcey288/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dagcey288/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dagcey288/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dagcey288/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dagcey288/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dagcey288/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>对抗病毒  彰化秀传中医:强化自身免疫力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/5c5f932c1c6396b0127d229faf6d4a0f-600x400.jpg" />
 <h6>彰化秀传中医师张祝霖：肺的运作源自于呼吸，良好的心肺耐力通常代表充盈的肺气，可强化人体第一道防线。 （秀传医院提供）
 </h6>
 <hr>
-<p>【大纪元2020年02月17日讯】（大纪元记者谢五男台湾彰化报导）变，是挑战人体机能正常运作的主要因素。在冬末春初，阴晴不定、日夜温差大的天气形态，常会使<a href="https://github.com/dagcey288/djy/blob/master/gb/tag/%E5%85%8D%E7%96%AB%E5%8A%9B.md">免疫力</a>不足的朋友的健康亮起红灯。以现代医学来说，找到疾病的病因（病毒、细菌），使用对应的特效药排除，以恢复健康，是直接有效的治疗方式；但是，<a href="https://github.com/dagcey288/djy/blob/master/gb/tag/%E7%97%85%E8%8F%8C.md">病菌</a>为求生存常会促使自己突变来衍生出<a href="https://github.com/dagcey288/djy/blob/master/gb/tag/%E6%8A%97%E8%8D%AF%E6%80%A7.md">抗药性</a>，所以临床常会有无药可用的囧境，需采取支持性疗法。彰化秀传医院中医部主治医师 张祝霖表示，此时，人体的正常免疫力就相当重要，一但失守，危机立即降临。</p>
-<p>张祝霖表示， 以不变应万变，是中医综合致病因素（邪气）以及人体<a href="https://github.com/dagcey288/djy/blob/master/gb/tag/%E5%85%8D%E7%96%AB%E5%8A%9B.md">免疫力</a>（正气）消长所作出的结论。面对变化多端的疫病挑战，我们自身能确实做到且也最有效的方法就是养好自己的免疫力。那要如何才能提升免疫呢？答案就是强化肺、脾气！（气，可比喻成运作功能）。</p>
+<p>【大纪元2020年02月17日讯】（大纪元记者谢五男台湾彰化报导）变，是挑战人体机能正常运作的主要因素。在冬末春初，阴晴不定、日夜温差大的天气形态，常会使<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%8D%E7%96%AB%E5%8A%9B.md#1">免疫力</a>不足的朋友的健康亮起红灯。以现代医学来说，找到疾病的病因（病毒、细菌），使用对应的特效药排除，以恢复健康，是直接有效的治疗方式；但是，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%97%85%E8%8F%8C.md#1">病菌</a>为求生存常会促使自己突变来衍生出<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8A%97%E8%8D%AF%E6%80%A7.md#1">抗药性</a>，所以临床常会有无药可用的囧境，需采取支持性疗法。彰化秀传医院中医部主治医师 张祝霖表示，此时，人体的正常免疫力就相当重要，一但失守，危机立即降临。</p>
+<p>张祝霖表示， 以不变应万变，是中医综合致病因素（邪气）以及人体<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%8D%E7%96%AB%E5%8A%9B.md#1">免疫力</a>（正气）消长所作出的结论。面对变化多端的疫病挑战，我们自身能确实做到且也最有效的方法就是养好自己的免疫力。那要如何才能提升免疫呢？答案就是强化肺、脾气！（气，可比喻成运作功能）。</p>
 <p>中医生理的五脏六腑中，与外感免疫最相关应属肺、脾。肺气，确保人体有足够氧气供应身体，并形成人体最外层的第一道防线；脾气，是使消化系统运作的能量，足够的营养让肺气的防御能量能有源源不绝的补充。</p>
 <figure style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/02/726639714d0dcdf891f0134843a3ace2-450x338.jpg" alt="药物治疗也是另一种选择。" width="500" b="338" /><figcaption class="wp-caption-text">药物治疗也是另一种选择。（秀传医院提供）</figcaption></figure>
 <p>张助林说，养肺益脾方法：</p>
@@ -23,37 +23,45 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/17/n11874785.htm">对抗病毒  彰化秀传中医:强化自身免疫力</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854656.htm">波士顿防新型冠状病毒 华埠举办座谈</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/9/n11854234.htm">褒忠吃饭担 万人共享平安餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854459.htm">地方政府互抢口罩 中共国务院禁令不管用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854482.htm">武汉笼罩阴霾 英媒曝焚烧感染者尸体所致</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/2/8/n11854331.md">公民武汉死于新病毒 美担忧北京应对危机能力</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854313.htm">湖北省高层异动 习近平开始“动刀子”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850690.htm">【十字路口】李文亮病逝 武汉肺炎致七大危机</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852281.htm">【罗厨寻味】年菜系列之六：煎酿鲈鱼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850022.htm">【胡乃文开讲】抗武汉肺炎 提升免疫力是关键！中医防疫3招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/4/9/n11174491.md#1">耳念珠菌全球扩散 美近半患者90天内丧生 3方法预防</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/18/n10791409.md#1">生鸡肉含沙门氏菌 全美近百人感染 纽约上榜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/8/n9817941.md#1">帮禽畜打抗生素 养出无药可医超级细菌</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/7/n8467883.md#1">患者面临抗生素末日危机 中医有良方</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/4/22/n7601571.md#1">相信吗？70%的疾病人体能自愈</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/4/13/n7551386.md#1">春季话感冒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/3/19/n4666656.md#1">感冒、哮喘、支气管炎 扁康丸治疗效果佳</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dagcey288/djy/blob/master/gb/20/2/17/n11874785.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dagcey288/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dagcey288/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dagcey288/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dagcey288/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dagcey288/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/3/n11022591.md#1" target="_blank">玉清心：物理大师束星北 一曲悲怆的挽歌</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/17/n11874785.htm">对抗病毒  彰化秀传中医:强化自身免疫力</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/17/n11874785.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
